--- a/details.html
+++ b/details.html
@@ -23,36 +23,36 @@
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </header>
-    <main class="h-screen flex flex-col md:flex-row">
-        <div class="hidden md:w-1/6 md:h-full md:flex flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl">
-            <div class="flex gap-2 items-center">
+    <main class="min-h-screen flex flex-col md:flex-row">
+        <div class="hidden md:flex md:w-1/6 flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl">
+            <a href="main-page.html" class="flex gap-2 items-center">
                 <i class="fa-solid fa-house text-3xl"></i>
                 <h1 class="font-bold">Home</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a href="" class="flex gap-2 items-center">
                 <i class="fa-solid fa-magnifying-glass text-3xl"></i>
                 <h1 class="font-bold">Search</h1>
-            </div>
+            </a>
 
 
-            <div class="flex gap-2 items-center">
+            <a href="" class="flex gap-2 items-center">
                 <i class="fa-solid fa-location-dot text-3xl"></i>
                 <h1 class="font-bold">Location</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a class="flex gap-2 items-center">
                 <i class="fa-solid fa-heart text-3xl"></i>
                 <h1 class="font-bold">Notifications</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a href="profile.html" class="flex gap-2 items-center">
                 <i class="fa-solid fa-user text-3xl"></i>
                 <h1 class="font-bold">Profile</h1>
-            </div>
+            </a>
         </div>
-        <div class="flex flex-col justify-center md:p-16 md:items-center md:w-5/6">
-            <div class="gap-4 bg-[url('images/yellow-river.jpg')] bg-cover object-cover w-full h-full md:rounded-2xl text-white">
+        <div class="flex-1 flex flex-col items-center px-4 md:px-16 py-8 pb-24">
+            <div class="gap-4 bg-[url('images/yellow-river.jpg')] bg-cover object-cover w-full h-1/2 md:rounded-2xl text-white">
                 <div class="flex flex-col h-full w-full justify-end p-4">
                     <h2 class="font-bold text-lg">Yellow river</h2>
                     <div class="flex gap-2">
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <div class="h-1/2 flex flex-col gap-4 items-center p-4">
+            <div class="flex flex-col gap-4 items-center p-4 h-1/2">
                 <div class="flex gap-2 justify-evenly">
                     <h1>Lets begin to read</h1>
                     <h2>End</h2>
@@ -91,10 +91,10 @@
     <!-- NAVBAR -->
     <div
         class="flex gap-6 h-16 px-4 justify-between items-center shadow-[0_-6px_12px_rgba(0,0,0,0.15)]  rounded-xl bg-white sticky bottom-0 md:hidden">
-        <i class="fa-solid fa-house text-2xl"></i>
-        <i class="fa-solid fa-location-dot text-2xl"></i>
-        <i class="fa-solid fa-heart text-2xl"></i>
-        <i class="fa-solid fa-user text-2xl"></i>
+        <a href="main-page.html"><i class="fa-solid fa-house text-3xl"></i></a> 
+        <a href=""><i class="fa-solid fa-location-dot text-3xl"></i></a>
+        <a href=""><i class="fa-solid fa-heart text-3xl"></i></a>
+        <a href="profile.html"><i class="fa-solid fa-user text-3xl"></i></a>
     </div>
 </body>
 
