--- a/main-page.html
+++ b/main-page.html
@@ -27,31 +27,31 @@
     <main class="flex flex-col m-4 py-4 md:flex-row md:justify-center">
         <div
             class="hidden w-1/6 md:flex h-full flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl fixed left-0 top-0">
-            <div class="flex gap-2 items-center">
+            <a href="main-page.html" class="flex gap-2 items-center">
                 <i class="fa-solid fa-house text-3xl"></i>
                 <h1 class="font-bold">Home</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a href="" class="flex gap-2 items-center">
                 <i class="fa-solid fa-magnifying-glass text-3xl"></i>
                 <h1 class="font-bold">Search</h1>
-            </div>
+            </a>
 
 
-            <div class="flex gap-2 items-center">
+            <a href="" class="flex gap-2 items-center">
                 <i class="fa-solid fa-location-dot text-3xl"></i>
                 <h1 class="font-bold">Location</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a class="flex gap-2 items-center">
                 <i class="fa-solid fa-heart text-3xl"></i>
                 <h1 class="font-bold">Notifications</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a href="profile.html" class="flex gap-2 items-center">
                 <i class="fa-solid fa-user text-3xl"></i>
                 <h1 class="font-bold">Profile</h1>
-            </div>
+            </a>
         </div>
         <div class="flex flex-col md:w-4/6">
             <div class="flex flex-col gap-4 md:justify-center md:h-full md:fixed md:right-0 md:top-0 md:p-4 md:bg-gray-100 rounded-l-2xl">
@@ -248,10 +248,10 @@
     <!-- NAVBAR -->
     <div
         class="flex gap-6 h-16 px-4 justify-between items-center shadow-[0_-6px_12px_rgba(0,0,0,0.15)]  rounded-xl bg-white sticky bottom-0 md:hidden">
-        <i class="fa-solid fa-house text-3xl"></i>
-        <i class="fa-solid fa-location-dot text-3xl"></i>
-        <i class="fa-solid fa-heart text-3xl"></i>
-        <i class="fa-solid fa-user text-3xl"></i>
+        <a href="main-page.html"><i class="fa-solid fa-house text-3xl"></i></a> 
+        <a href=""><i class="fa-solid fa-location-dot text-3xl"></i></a>
+        <a href=""><i class="fa-solid fa-heart text-3xl"></i></a>
+        <a href="profile.html"><i class="fa-solid fa-user text-3xl"></i></a>
     </div>
 </body>
 
