--- a/profile.html
+++ b/profile.html
@@ -12,64 +12,167 @@
 </head>
 
 <body>
-    <header></header>
-    <main class="h-screen flex flex-col md:flex-row">
-        <div class="hidden md:w-1/6 md:h-full md:flex flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl">
-            <div class="flex gap-2 items-center">
+    <header
+        class="flex items-center justify-between px-4 md:px-8 py-3 bg-white border-b border-gray-200 sticky top-0 md:hidden">
+        <button aria-label="Open navigation menu" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer md:hidden"
+            id="mobile-menu-button">
+            <i class="fa-solid fa-bars text-xl"></i>
+        </button>
+        <img src="images/logo.png" alt="" class="h-10">
+        <button aria-label="Open search bar" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer md:hidden">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+    </header>
+    <main class="min-h-screen flex flex-col md:flex-row">
+        <div
+            class="hidden w-1/6 md:flex h-full flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl fixed left-0 top-0">
+            <a href="main-page.html" class="flex gap-2 items-center">
                 <i class="fa-solid fa-house text-3xl"></i>
                 <h1 class="font-bold">Home</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a href="" class="flex gap-2 items-center">
                 <i class="fa-solid fa-magnifying-glass text-3xl"></i>
                 <h1 class="font-bold">Search</h1>
-            </div>
+            </a>
 
 
-            <div class="flex gap-2 items-center">
+            <a href="" class="flex gap-2 items-center">
                 <i class="fa-solid fa-location-dot text-3xl"></i>
                 <h1 class="font-bold">Location</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a class="flex gap-2 items-center">
                 <i class="fa-solid fa-heart text-3xl"></i>
                 <h1 class="font-bold">Notifications</h1>
-            </div>
+            </a>
 
-            <div class="flex gap-2 items-center">
+            <a href="profile.html" class="flex gap-2 items-center">
                 <i class="fa-solid fa-user text-3xl"></i>
                 <h1 class="font-bold">Profile</h1>
-            </div>
-        </div>
-        <div class="h-screen flex flex-col md:items-center md:p-16 md:w-5/6">
-            <div class="relative bg-[url(images/national-park.png)] object-cover w-full h-[35vh] md:h-[45vh] md:w-1/2 md:rounded-2xl">
-                <img src="images/profile.png" alt="" class="absolute left-0 bottom-0 w-32 h-32">
-            </div>
-            <form class="flex flex-col gap-2 w-full mx-4">
-                <h1 class="font-bold text-">Edit Profile</h1>
-                <h2>Update your personal informations</h2>
-                <label for="fname">First name:</label>
-                <input type="text" id="fname" name="fname" class="outline-2 rounded-2xl md:w-1/2">
-                <label for="lname">Last name:</label>
-                <input type="text" id="lname" name="lname" class="outline-2 rounded-2xl md:w-1/2">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" class="outline-2 rounded-2xl md:w-1/2">
-                <label for="email">Email:</label>
-                <input type="text" id="email" name="email" class="outline-2 rounded-2xl md:w-1/2">
-                <label for="number">Phone number:</label>
-                <input type="text" id="number" name="number" class="outline-2 rounded-2xl md:w-1/2">
-            </form>
+            </a>
         </div>
 
-    </main>
-    <!-- NAVBAR -->
-        <div
-            class="flex gap-6 h-16 px-4 justify-between items-center shadow-[0_-6px_12px_rgba(0,0,0,0.15)]  rounded-xl bg-white sticky bottom-0 md:hidden">
-            <i class="fa-solid fa-house text-3xl"></i>
-            <i class="fa-solid fa-location-dot text-3xl"></i>
-            <i class="fa-solid fa-heart text-3xl"></i>
-            <i class="fa-solid fa-user text-3xl"></i>
+
+        <div class="flex-1 flex flex-col items-center px-4 md:px-16 py-8 pb-24">
+            <div
+                class="relative w-full max-w-lg h-[20vh] rounded-2xl bg-[url('images/blog-1.jpg')] bg-cover bg-center">
+                <img src="images/profile.png"
+                    class="absolute -bottom-10 left-6 w-32 h-32 rounded-full border-4 border-white object-cover" />
+            </div>
+
+            <form class="flex flex-col gap-3 w-full max-w-lg mt-16">
+                <h1 class="font-bold text-xl">Edit Profile</h1>
+                <h2 class="text-gray-600">Update your personal informations</h2>
+
+                <label for="fname">First name:</label>
+                <input id="fname" class="border rounded-2xl p-2 w-full" />
+
+                <label for="lname">Last name:</label>
+                <input id="lname" class="border rounded-2xl p-2 w-full" />
+
+                <label for="username">Username:</label>
+                <input id="username" class="border rounded-2xl p-2 w-full" />
+
+                <label for="email">Email:</label>
+                <input id="email" class="border rounded-2xl p-2 w-full" />
+
+                <label for="number">Phone number:</label>
+                <input id="number" class="border rounded-2xl p-2 w-full" />
+            </form>
+
+<div class="flex flex-col items-center gap-3 w-full pt-4">
+    <h1 class="font-bold text-xl self-start md:self-center">
+        Favorite Articles :
+    </h1>
+
+    <a href="details.html" class="w-full max-w-lg">
+        <div class="rounded-2xl overflow-hidden bg-white shadow-lg">
+            <img src="images/yellow-river.jpg" alt="Yellow river" class="w-full h-48 object-cover" />
+
+            <div class="p-4">
+                <h2 class="font-bold text-lg">Yellow river</h2>
+                <p class="text-sm text-gray-500">by Ian Jacobson</p>
+
+                <div class="flex items-center gap-4 text-sm text-gray-500 mt-2">
+                    <div class="flex items-center gap-1">
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>China</span>
+                    </div>
+                    <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-clock"></i> <span>15 min</span>
+                    </div>
+                    <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-eye"></i> <span>12k</span>
+                    </div>
+                </div>
+            </div>
         </div>
+    </a>
+</div>
+<div class="flex flex-col items-center gap-3 w-full pt-4">
+    <h1 class="font-bold text-xl self-start md:self-center">
+        Reading History :
+    </h1>
+    <!-- Card 1 -->
+    <a href="details.html" class="w-full max-w-lg">
+        <div class="flex rounded-2xl overflow-hidden bg-white shadow-lg">
+            <img src="images/yellow-river.jpg" alt="Yellow river" class="w-1/3 h-48 object-cover" />
+
+            <div class="flex flex-col justify-center gap-2 p-4">
+                <h2 class="font-bold text-lg">Yellow river</h2>
+                <p class="text-sm text-gray-500">by Ian Jacobson</p>
+
+                <div class="flex items-center gap-4 text-sm text-gray-500 mt-2">
+                    <div class="flex items-center gap-1">
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>China</span>
+                    </div>
+                    <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-clock"></i> <span>15 min</span>
+                    </div>
+                    <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-eye"></i> <span>12k</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
+        <!-- Card 2 -->
+    <a href="details.html" class="w-full max-w-lg">
+        <div class="flex rounded-2xl w-full overflow-hidden bg-white shadow-lg">
+            <img src="images/national-park.png" alt="Yellow river" class="w-1/3 h-48 object-cover" />
+
+            <div class="flex flex-col justify-center gap-2 p-4">
+                <h2 class="font-bold text-lg">Banff National Park</h2>
+                <p class="text-sm text-gray-500">by Joe Rath</p>
+
+                <div class="flex items-center gap-4 text-sm text-gray-500 mt-2">
+                    <div class="flex items-center gap-1">
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>Canada</span>
+                    </div>
+                    <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-clock"></i> <span>12 min</span>
+                    </div>
+                    <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-eye"></i> <span>30k</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
+</div>
+
+
+        </div>
+    </main>
+
+    <!-- NAVBAR -->
+    <div
+        class="flex gap-6 h-16 px-4 justify-between items-center shadow-[0_-6px_12px_rgba(0,0,0,0.15)]  rounded-xl bg-white sticky bottom-0 md:hidden">
+        <a href="main-page.html"><i class="fa-solid fa-house text-3xl"></i></a>
+        <a href=""><i class="fa-solid fa-location-dot text-3xl"></i></a>
+        <a href=""><i class="fa-solid fa-heart text-3xl"></i></a>
+        <a href="profile.html"><i class="fa-solid fa-user text-3xl"></i></a>
+    </div>
 </body>
 
 </html>
